--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,3 +1,18 @@
 .App {
+  position: relative;
+
   height: 100%;
+
+  &-Settings {
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    height: 60px;
+    width: 60px;
+  }
 }
