--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,2 +1,21 @@
 .Button {
+  display: flex;
+  align-items: center;
+
+  padding: 2px 10px;
+
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 4px;
+
+  cursor: pointer;
+  outline: none;
+  box-shadow: none;
+
+  font-size: 14px;
+
+  transition: box-shadow 0.2s ease-out;
+
+  &:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  }
 }
