--- a/src/components/Countdown/Countdown.scss
+++ b/src/components/Countdown/Countdown.scss
@@ -1,4 +1,6 @@
 .Countdown {
+  --color: 340;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,15 +8,30 @@
 
   height: 100%;
 
+  background: linear-gradient(hsl(var(--color), 10%, 10%), hsl(var(--color), 10%, 5%));
+
   &-Title {
     font-size: 24px;
 
     margin-bottom: 10px;
+
+    color: hsl(var(--color), 10%, 90%);
   }
 
   &-Counter {
     font-size: 32px;
 
-    color: red;
+    color: hsl(var(--color), 80%, 40%);
+  }
+
+  &-Divider {
+    height: 1px;
+    width: 80%;
+    background: linear-gradient(
+      to left,
+      hsla(var(--color), 5%, 50%, 0.05) 0%,
+      hsla(var(--color), 81%, 94%, 0.2) 50%,
+      hsla(var(--color), 5%, 50%, 0.05) 100%
+    );
   }
 }
