--- a/src/components/Icon/Icon.scss
+++ b/src/components/Icon/Icon.scss
@@ -1,3 +1,12 @@
 .Icon {
-  font-size: 18px;
+  font-size: 24px;
+
+  cursor: pointer;
+
+  color: rgba(0, 0, 0, 0.3);
+  transition: color 0.1s ease-in;
+
+  &:hover {
+    color: rgba(0, 0, 0, 0.7);
+  }
 }
