--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,17 +1,42 @@
 .Sidebar {
     position: absolute;
     top: 0;
-    right: 0;
+    right: -300px;
 
-    width: 0;
+    width: 300px;
     height: 100%;
 
-    background-color: red;
+    background-color: white;
+    box-shadow: none;
 
-    transition: width .6s ease-out;
+    transition: box-shadow, right .3s ease-out;
     z-index: 2;
 
+    will-change: box-shadow, right;
+
     &_opened {
-        width: 300px;
+        right: 0px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .3);
+    }
+
+    &-TabPanel {
+        display: flex;
+
+        height: 60px;
+    }
+
+    &-Menu {
+        position: absolute;
+        top: 0;
+        left: -60px;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        height: 60px;
+        width: 60px;
+
+        z-index: 3;
     }
 }
