--- a/src/components/Sidebar/Tab/Tab.scss
+++ b/src/components/Sidebar/Tab/Tab.scss
@@ -1,10 +1,27 @@
-.Sidebar-Tab {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.Sidebar {
+    &-Tab {
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-    width: 100%;
-    height: 100%;
+        width: 100%;
+        height: 100%;
 
-    cursor: pointer;
+        cursor: pointer;
+
+        &_active{
+            .Sidebar-TabText{
+                background: rgb(245, 53, 53);
+            }
+        }
+    }
+
+    &-TabText {
+        padding: 10px;
+
+        border: 2px solid rgb(245, 53, 53);
+        border-radius: 20px;
+
+        cursor: pointer;
+    }
 }
