--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -2,20 +2,21 @@
   display: flex;
   align-items: center;
 
-  padding: 2px 10px;
+  padding: 0;
 
-  border: 1px solid rgba(0, 0, 0, 0.3);
   border-radius: 4px;
 
   cursor: pointer;
   outline: none;
   box-shadow: none;
+  border: none;
 
   font-size: 14px;
+  font-weight: 600;
 
-  transition: box-shadow 0.2s ease-out;
+  transition: color 0.2s ease-out;
 
   &:hover {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    color: rgb(61, 174, 222);
   }
 }
