--- a/src/components/TabPanel/TabPanel.scss
+++ b/src/components/TabPanel/TabPanel.scss
@@ -14,6 +14,10 @@
     }
 
     &-Content{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
         height: 100%;
     }
 
