--- a/src/components/CounterList/Counter/CounterList-Counter.scss
+++ b/src/components/CounterList/Counter/CounterList-Counter.scss
@@ -3,11 +3,18 @@
         position: relative;
 
         padding: 10px;
+        margin-bottom: 10px;
 
         cursor: pointer;
+        box-shadow: 0 0 5px rgb(213, 213, 213);
+        border-radius: 4px;
+        transition: background-color .2s ease-out;
 
-        &_active {
-            background-color: rgb(171, 171, 171);
+        will-change: background-color;
+
+        &_active,
+        &:hover {
+            background-color: rgb(240, 240, 240);
         }
 
         &:hover {
@@ -20,11 +27,15 @@
     &-Title {
         font-size: 18px;
 
-        margin-bottom: 10px;
+        color: var(--text-color-primary);
+
+        margin-bottom: 5px;
     }
 
     &-Date {
-        font-size: 14px;
+        color: var(--text-color-secondary);
+
+        font-size: var(--font-size-secondary);
     }
 
     &-RemoveButton {
@@ -33,7 +44,7 @@
         right: 10px;
 
         opacity: 0;
-        transition: opacity .25s ease-out;
+        transition: opacity .2s ease-out;
 
         will-change: opacity;
     }
