--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -2,4 +2,19 @@
   position: relative;
 
   height: 100%;
+
+  &-FridayIcon{
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    height: 60px;
+    width: 60px;
+
+    color: rgb(254, 84, 115);
+  }
 }
