--- a/src/components/Countdown/Countdown.scss
+++ b/src/components/Countdown/Countdown.scss
@@ -10,7 +10,7 @@
 
   height: 100%;
 
-  background: rgb(226, 226, 226);
+  background: var(--background-light);
 
   &-Title {
     font-size: 24px;
