--- a/src/components/Counter/Counter.scss
+++ b/src/components/Counter/Counter.scss
@@ -3,11 +3,13 @@
     margin-right: 20px;
     padding: 10px;
 
-    background: white;
+    background: var(--background-light);
+    box-shadow: 0 0 7px rgb(220, 220, 220);
     border-radius: 10px;
+    color: var(--text-primary-color);
 
     &-Unit {
-        font-size: 13px;
+        font-size: var(--font-size-secondary);
     }
 
     &-Value {
