--- a/src/components/CounterList/CounterList.scss
+++ b/src/components/CounterList/CounterList.scss
@@ -1,3 +1,15 @@
 .CounterList {
+    padding: 10px;
     width: 100%;
+    height: 100%;
+
+    //background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 95%, rgba(154,154,154,0.2) 100%);
+
+    overflow-y: auto;
+
+    &-Placeholder {
+        color: var(--text-secondary-color);
+        text-align: center;
+        font-size: var(--font-size-secondary);
+    }
 }
