--- a/src/components/DateInput/DateInput.scss
+++ b/src/components/DateInput/DateInput.scss
@@ -4,7 +4,7 @@
     align-items: flex-start;
 
     &-Label {
-        font-size: 14px;
+        font-size: var(--font-size-secondary);
         margin-bottom: 4px;
     }
 
