--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -6,18 +6,17 @@
     width: 300px;
     height: 100%;
 
-    background-color: white;
-    box-shadow: none;
+    background-color: var(--background-light);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .3);
 
     transform: translateX(300px);
     transition: box-shadow, transform .3s ease-out;
     z-index: 2;
 
-    will-change: box-shadow, transform;
+    will-change: transform;
 
     &_opened {
         transform: translateX(0);
-        box-shadow: 0 0 10px rgba(0, 0, 0, .3);
     }
 
     &-TabPanel {
@@ -39,5 +38,13 @@
         width: 60px;
 
         z-index: 3;
+    }
+
+    &-Bottom {
+        align-self: flex-end;
+    }
+
+    &-Item {
+        flex-shrink: 0;
     }
 }
