--- a/src/components/TextInput/TextInput.scss
+++ b/src/components/TextInput/TextInput.scss
@@ -4,7 +4,7 @@
     justify-content: flex-start;
 
     &-Label {
-        font-size: 16px;
+        font-size: var(--font-size-secondary);
 
         margin-bottom: 4px;
     }
