--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -2,13 +2,13 @@
   display: flex;
   align-items: center;
 
-  padding: 0;
+  padding: 2px 10px;
 
   border-radius: 4px;
 
   cursor: pointer;
   outline: none;
-  box-shadow: none;
+  box-shadow: 0 0 5px rgb(198, 198, 198);
   border: none;
 
   font-size: var(--font-size-primary);
@@ -23,8 +23,13 @@
     }
   }
 
-  &-Icon{
+  &-Icon {
     margin-left: 5px;
     font-size: var(--font-size-primary);
+  }
+
+  &_disabled {
+    cursor: initial;
+    pointer-events: none;
   }
 }
