--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,50 +1,59 @@
 .Sidebar {
+  --width: 300px;
+  --mobile-width: 240px;
+
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  width: var(--width);
+  height: 100%;
+
+  background-color: var(--background-light);
+
+  box-shadow: none;
+  transform: translateX(var(--width));
+  transition: box-shadow, transform 0.3s ease-out;
+  z-index: 2;
+
+  will-change: transform;
+
+  @media (max-width: 500px) {
+    width: var(--mobile-width);
+    transform: translateX(var(--mobile-width));
+  }
+
+  &_opened {
+    transform: translateX(0);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  }
+
+  &-TabPanel {
+    display: flex;
+
+    height: 100%;
+  }
+
+  &-Menu {
     position: absolute;
     top: 0;
-    right: 0;
+    left: -60px;
 
-    width: 300px;
-    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-    background-color: var(--background-light);
-    box-shadow: 0 0 10px rgba(0, 0, 0, .3);
+    height: 60px;
+    width: 60px;
 
-    transform: translateX(300px);
-    transition: box-shadow, transform .3s ease-out;
-    z-index: 2;
+    z-index: 3;
+  }
 
-    will-change: transform;
+  &-Bottom {
+    align-self: flex-end;
+  }
 
-    &_opened {
-        transform: translateX(0);
-    }
-
-    &-TabPanel {
-        display: flex;
-
-        height: 100%;
-    }
-
-    &-Menu {
-        position: absolute;
-        top: 0;
-        left: -60px;
-
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        height: 60px;
-        width: 60px;
-
-        z-index: 3;
-    }
-
-    &-Bottom {
-        align-self: flex-end;
-    }
-
-    &-Item {
-        flex-shrink: 0;
-    }
+  &-Item {
+    flex-shrink: 0;
+  }
 }
