--- a/src/components/App/Ads/style.scss
+++ b/src/components/App/Ads/style.scss
@@ -1,10 +1,23 @@
 .Ads {
-    position: absolute;
-    bottom: 64px;
-    left: 50%;
+    position: fixed;
+    height: 100%;
+    width: 100%;
 
-    transform: translateX(-50%);
+    top: 0;
+    left: 0;
 
-    width: 300px;
-    height: 100px;
+    &-Item {
+        position: absolute;
+
+        transform: translateX(-50%);
+        left: 50%;
+
+        &_top {
+            top: 64px;
+        }
+
+        &_bottom {
+            bottom: 64px;
+        }
+    }
 }
