chore: small fixes

--- a/src/components/App/Ads/style.scss
+++ b/src/components/App/Ads/style.scss
@@ -12,6 +12,9 @@
         transform: translateX(-50%);
         left: 50%;
 
+        width: 80%;
+        height: 100px;
+
         &_top {
             top: 64px;
         }
